# declib

./: README.md  config.yaml  example.py  pyproject.toml
declib/: __init__.py  api.py  cli.py  config.py  logging.py  main.py
declib/utils/: __init__.py  deep_addr_dict.py  dictlike.py  mark_yaml.py
example/declib_example/: __init__.py  __main__.py  api.py  config.py  exceptions.py
example/declib_example/cli/: __init__.py  main.py  run.py
